--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ body {
 
 .contacts {
   display: flex; 
-  justify-content: space-between; 
+  justify-content: space-evenly; 
 }
 
 .contacts i {
