--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,12 +64,20 @@ body {
 }
 
 .address {
+  margin-bottom: 5px;
   font-size: 1rem;
   color: var(--text-color);
   text-decoration: none;
 }
 
 .address a {
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+.email {
+  margin-top: 5px;
+  font-size: 1rem;
   color: var(--text-color);
   text-decoration: none;
 }
